Fix double border issue on nav tabs

--- a/src/stylesheets/topnav.less
+++ b/src/stylesheets/topnav.less
@@ -61,6 +61,11 @@ topnav-buttons:focus {
   background-color: @magenta;
   color: white;
 }
+
+.nav-tabs {
+  border-style: none;
+}
+
 .nav-tabs > li > a:hover {
   background: #f5f5f5;
   border-bottom: 0;
